k8s/base/resources/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ui
  labels:
    app: app-ui
    kind: ui
spec:
  selector:
    matchLabels:
      app: app-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: app-ui
    spec:
      containers:
        - name: app-ui
          image: europe-west9-docker.pkg.dev/qsh-learning/qsh-learning-docker-registry/myapp-ui-me
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
            limits:
              cpu: "500m"
              memory: "1000Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-ui
spec:
  selector:
    app: app-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
