k8s/base/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "20M"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "4sh-formation-me.learning.quatre.app"
      secretName: my-training-me-cert
  rules:
    - host: 4sh-formation-me.learning.quatre.app
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: app-srv
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-ui
                port:
                  number: 80
---
